# bootcamp-ml-framework

./: README.md  pyproject.toml
bootcamp_ml_framework/: data_processing.py
bootcamp_ml_framework/model/: regression.py
bootcamp_ml_framework/postprocessing/: metrics.py
bootcamp_ml_framework/preprocessing/: preprocessing_utils.py
bootcamp_ml_framework/utils/: logging_utils.py
tests/: test_data_processing.py
